# rarelink_phenopacket_mapper

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: locs.yml  pages.yml  publish_to_pypi.yml  python_ci.yml  test_coverage.yml
docs/: conf.py  index.rst  installation.rst  introduction.rst  quickstart.rst  user_guides.rst
docs/user_guides/: create_data_model_in_code.rst  read_data_model_from_file.rst
latest/: genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  user_guides.html
latest/_modules/: index.html
latest/_sources/: introduction.rst.txt  quickstart.rst.txt  user_guides.rst.txt
latest/_sources/apidocs/: modules.rst.txt  phenopacket_mapper.api_requests.api_request_super_class.rst.txt  phenopacket_mapper.api_requests.get.rst.txt  phenopacket_mapper.api_requests.hpo_api_request.rst.txt  phenopacket_mapper.api_requests.orpha_api_request.rst.txt  phenopacket_mapper.api_requests.rst.txt  phenopacket_mapper.cli.quickstart_command.rst.txt  (+64 more)
latest/apidocs/: modules.html  phenopacket_mapper.api_requests.api_request_super_class.html  phenopacket_mapper.api_requests.get.html  phenopacket_mapper.api_requests.hpo_api_request.html  phenopacket_mapper.api_requests.html  phenopacket_mapper.api_requests.orpha_api_request.html  phenopacket_mapper.cli.html  phenopacket_mapper.cli.main.html  phenopacket_mapper.cli.mapping_command.html  phenopacket_mapper.cli.quickstart_command.html  phenopacket_mapper.cli.validate_command.html  phenopacket_mapper.data_standards.DataModel2PhenopacketSchema.html  phenopacket_mapper.data_standards.code.html  phenopacket_mapper.data_standards.code_system.html  phenopacket_mapper.data_standards.data_model.html  phenopacket_mapper.data_standards.data_models.erdri_cds.html  phenopacket_mapper.data_standards.data_models.html  phenopacket_mapper.data_standards.data_models.rarelink_datamodel.html  phenopacket_mapper.data_standards.date.html  phenopacket_mapper.data_standards.html  phenopacket_mapper.data_standards.value_set.html  phenopacket_mapper.html  phenopacket_mapper.mapping.html  phenopacket_mapper.mapping.map_element.html  phenopacket_mapper.mapping.map_field.html  phenopacket_mapper.mapping.mapper.html  phenopacket_mapper.mapping.phenopacket_building_block.html  phenopacket_mapper.mapping.phenopacket_element.html  phenopacket_mapper.pipeline.html  phenopacket_mapper.pipeline.input.html  phenopacket_mapper.pipeline.mapper.html  phenopacket_mapper.pipeline.output.html  phenopacket_mapper.pipeline.validate.html  phenopacket_mapper.preprocessing.html  phenopacket_mapper.preprocessing.preprocess.html  phenopacket_mapper.preprocessing.preprocess_dict.html  phenopacket_mapper.preprocessing.preprocess_method.html  phenopacket_mapper.utils.create_ipynb_in_code.html  phenopacket_mapper.utils.get_field_name.html  phenopacket_mapper.utils.html  (+47 more)
latest/user_guides/: create_data_model_in_code.html  read_data_model_from_file.html
notebooks/: erdri_cds_definition_in_code.ipynb  erdri_cds_from_file.ipynb  mapping.ipynb
src/: defining_erdri_cds.ipynb  erdri_cds_from_file.ipynb  quickstart.ipynb
src/phenopacket_mapper/: __init__.py
src/rarelink_phenopacket_mapper/: __init__.py
stable/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
stable/_modules/: index.html
stable/_sources/: index.rst.txt
stable/apidocs/: modules.html  phenopacket_mapper.cli.html  phenopacket_mapper.cli.main.html  phenopacket_mapper.cli.mapping_command.html  phenopacket_mapper.cli.quickstart_command.html  phenopacket_mapper.cli.validate_command.html  phenopacket_mapper.data_standards.DataModel2PhenopacketSchema.html  phenopacket_mapper.data_standards.code.html  phenopacket_mapper.data_standards.code_system.html  phenopacket_mapper.data_standards.data_model.html  phenopacket_mapper.data_standards.data_models.erdri_cds.html  phenopacket_mapper.data_standards.data_models.html  phenopacket_mapper.data_standards.data_models.rarelink_datamodel.html  phenopacket_mapper.data_standards.date.html  phenopacket_mapper.data_standards.html  phenopacket_mapper.html  phenopacket_mapper.pipeline.html  phenopacket_mapper.pipeline.input.html  phenopacket_mapper.pipeline.mapper.html  phenopacket_mapper.pipeline.output.html  phenopacket_mapper.pipeline.validate.html  phenopacket_mapper.utils.create_ipynb_in_code.html  phenopacket_mapper.utils.get_field_name.html  phenopacket_mapper.utils.html  phenopacket_mapper.utils.pandas_utils.html  phenopacket_mapper.utils.parsing.html  phenopacket_mapper.utils.parsing.parse_data_type.html  phenopacket_mapper.utils.parsing.parse_ordinal.html  rarelink_phenopacket_mapper.example.html  rarelink_phenopacket_mapper.example.plus.html  rarelink_phenopacket_mapper.numpy_example.html
tests/api_requests/: test_hpo_api_request.py  test_orpha_api_request.py
tests/data_standards/: test_date.py  test_value_set.py
tests/example/: test_minus.py  test_plus.py
tests/numpy_example/: sum_over_array.py
(+222 files in other folders)
