[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phenopacket_mapper"
authors = [
    {name = "Filip Rehburg", email="filip.rehburg@charite.de"},
     ]
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Test",
    "TODO",
    "ETC",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Machine Learning"
]
dependencies = [
    "loguru", "phenopackets", "pandas", "openpyxl", "jupyter", "requests", "bs4",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0", "pytest-cov"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/frehburg/phenopacket_mapper"
repository = "https://github.com/frehburg/phenopacket_mapper.git"
documentation = "https://frehburg.github.io/phenopacket_mapper/stable"
bugtracker = "https://github.com/frehburg/phenopacket_mapper/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "phenopacket_mapper.__version__" }

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
pm = "phenopacket_mapper.cli.main:main"
